[package]
name = "examples"
version = "0.0.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
woi = { path = "../woi"}


[[example]]
name = "join"
path = "join.rs"

[[example]]
name = "unbounded_channel"
path = "unbounded_channel.rs"

[[example]]
name = "bounded_channel"
path = "bounded_channel.rs"

[[example]]
name = "tcp_read"
path = "tcp_read.rs"

[[example]]
name = "sleep"
path = "sleep.rs"

[[example]]
name = "panic"
path = "panic.rs"

[[example]]
name = "drop_joinhandle"
path = "drop_joinhandle.rs"